<resources>
    <string name="app_name">CineFolks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="release_date">Release :</string>

    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="votes"> votes</string>
    <string name="rating">Rating</string>

    <string name="duration">"Duration -"</string>
    <string name="site">"Site -"</string>
    <string name="quality">"Quality -"</string>
    <string name="min">" min"</string>

    //movie
    <string name="movies">Movies</string>
    <string name="add_favourites">Movie added to favourites!</string>
    <string name="remove_favourites">Movie removed from favourites.</string>
    <string name="transition_movie_photo" translatable="false">TN_Movie_Photo</string>

    //tv
    <string name="tv_shows">TV Series</string>
    <string name="add_tv_favourites">TV Series added to Watchlist!</string>
    <string name="remove_tv_favourites">TV Series removed from Watchlist.</string>

    <string name="action_search">Search</string>
    <string name="Search_result">Search</string>

    <string name="tv_hint">Search Tv Shows</string>
    <string name="movies_hint">Search Movies</string>

    <string name="empty_view_text_fab">No favorites yet!</string>
    <string name="empty_view_text_watch">No WatchList yet!</string>

    <string name="action_share">Share</string>

    //about
    <string name="action_feed">Help &amp; Feedback</string>
    <string name="action_about">About App</string>

    <string name="email_address">prashant.panwar777@gmail.com</string>
    <string name="git_hub">https://github.com/prshntpnwr/MoviesApp-</string>
    <string name="website">http://prshntpnwr.github.io</string>

    <string name="contact">Connect with us</string>
    <string name="copy_right">Copyrights © %1$d</string>

    <string name="transition_image" translatable="false">TN_DetailIcon</string>

    <string name="app_detail">CineFolks is an Android Application for viewing Movie and TV series
        details. View details, add to favorites and watchlist,
        get daily notification for watchlist added tv shows.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
