<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies" />

        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_tv"
            android:title="@string/tv_shows" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/action_feed" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/action_about" />
    </group>
</menu>
