<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_overlapTop="64dp"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/detail_poster_width"
            android:layout_height="@dimen/detail_poster_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_notification"
            android:transitionName="@string/transition_image"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_medium"
            android:paddingBottom="@dimen/activity_horizontal_padding_mid"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_horizontal_padding_mid"
            android:text="Movie Title: Just A Movie"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_condensed_regular_italic"
            android:paddingBottom="@dimen/activity_horizontal_padding_mid"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:text="this is a tag line"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_below="@+id/tag_line"
            android:layout_toEndOf="@id/image"
            android:layout_margin="@dimen/activity_horizontal_margin_small"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/rating_icon_size"
                android:layout_height="@dimen/rating_icon_size"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:padding="@dimen/rating_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/date_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="2017-12-30 (release)" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_below="@id/date"
            android:layout_toEndOf="@id/image"
            android:layout_margin="@dimen/activity_horizontal_margin_small"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/rating_icon_size"
                android:layout_height="@dimen/rating_icon_size"
                android:adjustViewBounds="true"
                android:padding="@dimen/rating_padding"
                android:backgroundTint="@color/black"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_clock" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="120 min" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#20000000"
        android:padding="@dimen/activity_horizontal_padding_mid" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_mid"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_padding_regular"
            android:paddingTop="@dimen/activity_horizontal_padding_mid">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin_mid"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/up_votes"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_mid"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_votes" />

            </FrameLayout>

            <TextView
                android:id="@+id/vote_count"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/about_contact_us" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/zero"
            android:paddingEnd="@dimen/activity_horizontal_padding_regular"
            android:paddingTop="@dimen/activity_horizontal_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/ratings_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_rating" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    style="@style/TextAppearance.AppCompat.Caption" />

            </FrameLayout>

            <TextView
                android:id="@+id/rating_count"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/rating" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/one"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_padding_regular"
            android:paddingTop="@dimen/activity_horizontal_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/genre_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_genre" />

            </FrameLayout>

            <TextView
                android:id="@+id/genre"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/two"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_padding_regular"
            android:paddingTop="@dimen/activity_horizontal_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/pop_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_popularity" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    style="@style/TextAppearance.AppCompat.Caption" />

            </FrameLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:text="@string/popularity" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/three"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/lang_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_popularity" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    style="@style/TextAppearance.AppCompat.Caption" />

            </FrameLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:text="@string/language" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_mid"
        android:layout_marginTop="@dimen/activity_horizontal_margin_mid"
        android:background="#20000000"
        android:padding="@dimen/activity_horizontal_padding_mid" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_padding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="#20000000"
        android:padding="@dimen/activity_horizontal_padding_mid" />

</LinearLayout>